# OGLtest

./: .gitignore
OGLtest/: CMakeLists.txt  OGLtest.sln  build.sh  buildclean.sh  imgui.ini
OGLtest/OGLtest/: OGLtest.vcxproj  OGLtest.vcxproj.filters  imgui.ini
OGLtest/OGLtest/res/shaders/: Basic.shader
OGLtest/OGLtest/src/: IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  app.cpp
OGLtest/OGLtest/src/tests/: Test.cpp  Test.h  TestClearColor.cpp  TestClearColor.h  TestTexture2D.cpp  TestTexture2D.h
